# vmi-retreat-workshop-2024

./: .gitignore  README.md  attack.py  chat.py  check_results.py  conversation.json  pyproject.toml  requirements.txt  test.jbstring
